🚧 🏗️ ✨new cursor code

--- a/src/components/Cursor/Cursor.css
+++ b/src/components/Cursor/Cursor.css
@@ -1,8 +1,8 @@
-body {
+/* body {
 	cursor: none;
-}
+} */
 
-.cursor {
+/* .cursor {
 	width: 40px;
 	height: 40px;
 	border: 0.01rem solid grey;
@@ -10,9 +10,9 @@ body {
 	position: absolute;
 	animation: Anim1 1s infinite alternate;
 	pointer-events: none;
-}
+} */
 
-.cursor::before {
+/* .cursor::before {
 	content: "";
 	position: absolute;
 	top: 50%;
@@ -22,23 +22,23 @@ body {
 	height: 5px;
 	background: black;
 	border-radius: 50%;
-}
+} */
 
-.expand {
+/* .expand {
 	animation: Anim2 0.5s;
 	background: silver;
-	/* border: 1px solid crimson; */
-}
-@keyframes Anim1 {
+	border: 1px solid crimson;
+} */
+/* @keyframes Anim1 {
 	from {
 		transform: scale(1) rotate(0deg);
 	}
 	to {
 		transform: scale(0.7) rotate(190deg);
 	}
-}
+} */
 
-@keyframes Anim2 {
+/* @keyframes Anim2 {
 	0% {
 		transform: scale(1);
 	}
@@ -49,4 +49,35 @@ body {
 		transform: scale(1);
 		opacity: 0;
 	}
+} */
+
+.ring {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 22px;
+	height: 22px;
+	border: 2px solid rgba(31, 30, 30, 0.808);
+	border-radius: 100%;
+	transform: translate(-50%, -50%);
+	-webkit-transition-duration: 100ms;
+	transition-duration: 100ms;
+	-webkit-transition-timing-function: ease-out;
+	transition-timing-function: ease-out;
+	will-change: width, height, transform, border;
+	z-index: 999;
+	pointer-events: none;
+}
+
+.dot {
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	width: 8px;
+	height: 8px;
+	background-color: black;
+	border-radius: 100%;
+	transform: translate(-50%, -50%);
+	z-index: 999;
+	pointer-events: none;
 }
