--- a/src/components/Cursor/Cursor.css
+++ b/src/components/Cursor/Cursor.css
@@ -81,3 +81,14 @@
 	z-index: 999;
 	pointer-events: none;
 }
+
+.ring.hovered {
+	width: 50px;
+	height: 50px;
+	border-width: 3px;
+	border-color: lightgray;
+}
+
+.dot.hovered {
+	display: none;
+}
